--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -7,12 +6,19 @@
     "dev": "next dev --turbopack -p 9003",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "NODE_ENV=production next build",
+    "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "android:build": "npm run build && npx cap sync android",
+    "android:run": "npx cap run android",
+    "android:open": "npx cap open android",
+    "android:serve": "npm run dev && npm run android:run"
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
     "@genkit-ai/flow": "^0.5.17",
     "@genkit-ai/google-genai": "1.29.0",
     "@google/generative-ai": "^0.21.0",
@@ -38,6 +44,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/qrcode": "^1.5.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,6 +60,7 @@
     "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "puter": "latest",
+    "qrcode": "^1.5.4",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.1",
@@ -68,6 +76,7 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
+    "cross-env": "^10.1.0",
     "genkit-cli": "1.29.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
