working routes static

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,6 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDQmt8o2YeCrB3yIoxjVDosJA7EJUttWTU
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=letpractice.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=letpractice
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=letpractice.firebasestorage.app
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=322612236786
-NEXT_PUBLIC_FIREBASE_APP_ID=1:322612236786:web:922392c848421068621b6b
-GEMINI_API_KEY=AIzaSyD9kEhcEX-PeGsS9P6Q88UIJzpRd4Nqijc
+# Firebase Configuration
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+NEXT_PUBLIC_FIREBASE_FUNCTIONS_URL=https://us-central1-your-project-id.cloudfunctions.net
+
+# Development
+NEXT_PUBLIC_FIREBASE_FUNCTIONS_DEV_URL=http://localhost:5001/your-project-id/us-central1
